test/semantic_error/se_fc_sizel.c0
int f(int a, int b) {}

int g() { f(1); }
